Removed preview features Added queryName method