@@ -112,7 +112,6 @@
                             <sourcepath>${delombok.output}</sourcepath>
                             <release>${java.version}</release>
                             <failOnError>true</failOnError>
-                            <additionalOptions>--enable-preview</additionalOptions>
                             <show>private</show>
                             <debug>true</debug>
                             <verbose>true</verbose>
@@ -232,9 +231,6 @@
                             <version>${lombok.version}</version>
                         </annotationProcessorPath>
                     </annotationProcessorPaths>
-                    <compilerArgs>
-                        <compilerArg>--enable-preview</compilerArg>
-                    </compilerArgs>
                     <failOnError>true</failOnError>
                 </configuration>
             </plugin>
@@ -251,9 +247,6 @@
                         <version>${junit.version}</version>
                     </dependency>
                 </dependencies>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
